--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -15,35 +15,45 @@
 <h1 class="header"><i class="fa fa-universal-access"></i> Accessibility Report</h1>
 <div class="container">
     <div class="row">
-        <div class="col-lg-3 col-md-6 pills badge badge-primary">
-            <div class="section">
-                <h6>Number of URL's</h6>
-                <h1>100</h1>
+        <div class="col-sm-6">
+            <div class="row">
+                <div class="col-sm-6 pills badge badge-primary">
+                    <div class="section">
+                        <h6>Number of URL's</h6>
+                        <h1>100</h1>
+                    </div>
+                </div>
+                <div class="col-sm-6 pills badge badge-danger">
+                    <div class="section">
+                        <h6>Errors</h6>
+                        <h1>100</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 pills badge badge-warning">
+                    <div class="section">
+                        <h6>Warnings</h6>
+                        <h1>100</h1>
+                    </div>
+                </div>
+                <div class="col-sm-6 pills badge badge-info">
+                    <div class="section ">
+                        <h6>Notices</h6>
+                        <h1>100</h1>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 pills badge badge-danger">
-            <div class="section">
-                <h6>Errors</h6>
-                <h1>100</h1>
+        <div class="col-sm-6">
+            <div class="row justify-content-md-center">
+                <div class="col-sm">
+                    <canvas id="myChart" width="400" height="250"></canvas>
+                </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 pills badge badge-warning">
-            <div class="section">
-                <h6>Warnings</h6>
-                <h1>100</h1>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-6 pills badge badge-info">
-            <div class="section ">
-                <h6>Notices</h6>
-                <h1>100</h1>
-            </div>
-        </div>
-    </div>
-    <div class="row justify-content-md-center">
-        <div class="col-sm col-lg-6 col-md-8">
-            <canvas id="myChart" width="400" height="300"></canvas>
-        </div>
+
+
     </div>
 </div>
 
