Report - truncation long URLS

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -52,8 +52,14 @@
                 </div>
             </div>
         </div>
-
-
+    </div>
+    <div class="row">
+        <div class="col-sm-6 pills badge badge-light">
+adas
+        </div>
+        <div class="col-sm-6 pills badge badge-light">
+            adas
+        </div>
     </div>
 </div>
 
