Dashboard for page template

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -55,7 +55,18 @@
     </div>
     <div class="row">
         <div class="col-sm-6 pills badge badge-light">
-adas
+            <h5>Report Name</h5>
+            <h6>http://pa11y.org</h6>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <span class="specs">STANDARD : </span>
+                    <span class="badge badge-success">WCAG2AA</span>
+                </div>
+                <div class="col-4">
+                    <span class="specs">BROWSER SIZE : </span>
+                    <span class="badge badge-success">1280 X 720</span>
+                </div>
+            </div>
         </div>
         <div class="col-sm-6 pills badge badge-light">
             adas
