--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 pills badge badge-light">
+        <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="row justify-content-center">
@@ -67,9 +67,87 @@
                     <span class="badge badge-success">1280 X 720</span>
                 </div>
             </div>
+            <div class="row justify-content-center pagespechold">
+                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-warning">200</div>
+                <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
         </div>
-        <div class="col-sm-6 pills badge badge-light">
-            adas
+        <div class="col-sm-6 pills badge badge-secondary">
+            <h5>Report Name</h5>
+            <h6>http://pa11y.org</h6>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <span class="specs">STANDARD : </span>
+                    <span class="badge badge-success">WCAG2AA</span>
+                </div>
+                <div class="col-4">
+                    <span class="specs">BROWSER SIZE : </span>
+                    <span class="badge badge-success">1280 X 720</span>
+                </div>
+            </div>
+            <div class="row justify-content-center pagespechold">
+                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-warning">200</div>
+                <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
+        </div>
+        <div class="col-sm-6 pills badge badge-secondary">
+            <h5>Report Name</h5>
+            <h6>http://pa11y.org</h6>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <span class="specs">STANDARD : </span>
+                    <span class="badge badge-success">WCAG2AA</span>
+                </div>
+                <div class="col-4">
+                    <span class="specs">BROWSER SIZE : </span>
+                    <span class="badge badge-success">1280 X 720</span>
+                </div>
+            </div>
+            <div class="row justify-content-center pagespechold">
+                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-warning">200</div>
+                <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
+        </div>
+        <div class="col-sm-6 pills badge badge-secondary">
+            <h5>Report Name</h5>
+            <h6>http://pa11y.org</h6>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <span class="specs">STANDARD : </span>
+                    <span class="badge badge-success">WCAG2AA</span>
+                </div>
+                <div class="col-4">
+                    <span class="specs">BROWSER SIZE : </span>
+                    <span class="badge badge-success">1280 X 720</span>
+                </div>
+            </div>
+            <div class="row justify-content-center pagespechold">
+                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-warning">200</div>
+                <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
+        </div>
+        <div class="col-sm-6 pills badge badge-secondary">
+            <h5>Report Name</h5>
+            <h6>http://pa11y.org</h6>
+            <div class="row justify-content-center">
+                <div class="col-4">
+                    <span class="specs">STANDARD : </span>
+                    <span class="badge badge-success">WCAG2AA</span>
+                </div>
+                <div class="col-4">
+                    <span class="specs">BROWSER SIZE : </span>
+                    <span class="badge badge-success">1280 X 720</span>
+                </div>
+            </div>
+            <div class="row justify-content-center pagespechold">
+                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-warning">200</div>
+                <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
         </div>
     </div>
 </div>
