Added time in Dashboard page template

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -12,7 +12,7 @@
     <title>Report</title>
 </head>
 <body>
-<h1 class="header"><i class="fa fa-universal-access"></i> Accessibility Report</h1>
+<h1 class="header"><i class="fas fa-universal-access"></i> Accessibility Report</h1>
 <div class="container">
     <div class="row">
         <div class="col-sm-6">
@@ -57,6 +57,9 @@
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
+            <div class="time">
+                <span class="text-warning"><i class="fas fa-clock"></i> 12-Sep-14 10:10:10</span>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="specs">STANDARD : </span>
@@ -76,6 +79,9 @@
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
+            <div class="time">
+                <span class="text-warning"><i class="fas fa-clock"></i> 12-Sep-14 10:10:10</span>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="specs">STANDARD : </span>
@@ -95,6 +101,9 @@
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
+            <div class="time">
+                <span class="text-warning"><i class="fas fa-clock"></i> 12-Sep-14 10:10:10</span>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="specs">STANDARD : </span>
@@ -114,6 +123,9 @@
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
+            <div class="time">
+                <span class="text-warning"><i class="fas fa-clock"></i> 12-Sep-14 10:10:10</span>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="specs">STANDARD : </span>
@@ -133,6 +145,9 @@
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
+            <div class="time">
+                <span class="text-warning"><i class="fas fa-clock"></i> 12-Sep-14 10:10:10</span>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <span class="specs">STANDARD : </span>
