Updated templates with headings

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -14,6 +14,8 @@
 <body>
 <h1 class="header"><i class="fas fa-universal-access"></i> Accessibility Report</h1>
 <div class="container">
+    <br>
+    <h3 class="text-white text-center"><i class="fas fa-chart-pie text-info"></i> Dashboard</h3>
     <div class="row">
         <div class="col-sm-6">
             <div class="row">
@@ -53,6 +55,8 @@
             </div>
         </div>
     </div>
+    <br>
+    <h3 class="text-white text-center"><i class="fas fa-file text-info"></i> Page Statistics</h3>
     <div class="row">
         <div class="col-sm-6 pills badge badge-secondary">
             <h5>Report Name</h5>
@@ -65,6 +69,7 @@
                     <span class="specs">STANDARD : </span>
                     <span class="badge badge-success">WCAG2AA</span>
                 </div>
+
                 <div class="col-4">
                     <span class="specs">BROWSER SIZE : </span>
                     <span class="badge badge-success">1280 X 720</span>
