--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -58,7 +58,7 @@
     <br>
     <h3 class="text-white text-center"><i class="fas fa-file text-info"></i> Page Statistics</h3>
     <div class="row">
-        <div class="col-sm-6 pills badge badge-secondary">
+        <div class="col-sm-6 pillspage badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="time">
@@ -76,12 +76,19 @@
                 </div>
             </div>
             <div class="row justify-content-center pagespechold">
-                <div class="col-2 pagespec badge badge-danger">100</div>
+                <div class="col-2 pagespec badge badge-danger">
+                    100
+                </div>
                 <div class="col-2 pagespec badge badge-warning">200</div>
                 <div class="col-2 pagespec badge badge-info">300</div>
             </div>
+            <div class="row">
+                <div class="col viewreport">
+                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6 pills badge badge-secondary">
+        <div class="col-sm-6 pillspage badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="time">
@@ -102,8 +109,13 @@
                 <div class="col-2 pagespec badge badge-warning">200</div>
                 <div class="col-2 pagespec badge badge-info">300</div>
             </div>
+            <div class="row">
+                <div class="col viewreport">
+                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6 pills badge badge-secondary">
+        <div class="col-sm-6 pillspage badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="time">
@@ -124,8 +136,13 @@
                 <div class="col-2 pagespec badge badge-warning">200</div>
                 <div class="col-2 pagespec badge badge-info">300</div>
             </div>
+            <div class="row">
+                <div class="col viewreport">
+                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6 pills badge badge-secondary">
+        <div class="col-sm-6 pillspage badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="time">
@@ -146,8 +163,13 @@
                 <div class="col-2 pagespec badge badge-warning">200</div>
                 <div class="col-2 pagespec badge badge-info">300</div>
             </div>
+            <div class="row">
+                <div class="col viewreport">
+                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-6 pills badge badge-secondary">
+        <div class="col-sm-6 pillspage badge badge-secondary">
             <h5>Report Name</h5>
             <h6>http://pa11y.org</h6>
             <div class="time">
@@ -167,6 +189,11 @@
                 <div class="col-2 pagespec badge badge-danger">100</div>
                 <div class="col-2 pagespec badge badge-warning">200</div>
                 <div class="col-2 pagespec badge badge-info">300</div>
+            </div>
+            <div class="row">
+                <div class="col viewreport">
+                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                </div>
             </div>
         </div>
     </div>
