Page Template initial commit

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -84,7 +84,7 @@
             </div>
             <div class="row">
                 <div class="col viewreport">
-                    <a href="#" class="btn btn-outline-light btn-sm" role="button">View Report</a>
+                    <a href="page.html" class="btn btn-outline-light btn-sm" role="button">View Report</a>
                 </div>
             </div>
         </div>
