--- a/src/main/resources/page.html
+++ b/src/main/resources/page.html
@@ -94,7 +94,9 @@
                 Notices <span class="badge badge-light">4</span>
             </button>
         </div>
-        <div class="col-xs collapse show btncollapse" id="collapseErrors">
+    </div>
+    <div class="row" id="accordion">
+        <div class="col collapse show btncollapse" data-parent="#accordion" id="collapseErrors">
             <div class="card bg-danger">
                 <div class="alert alert-danger btncollapse" role="alert">
                     <div><strong>Code(s) : </strong>WCAG2AA.Principle2.Guideline 2_4.2_4_4.H77,H78,H79,H80,H81 </div>
@@ -119,6 +121,43 @@
                     <div><strong>Element : </strong> \\u003Ctitle>...\\u003C/title></div>
                 </div>
                 <div class="alert alert-danger btncollapse" role="alert">
+                    <div><strong>Code(s) : </strong>WCAG2AA.Principle2.Guideline 2_4.2_4_4.H77,H78,H79,H80,H81 </div>
+                    <hr/>
+                    <div><strong>Technique(s) : </strong> <a href="#" class="alert-link">H77</a>, <a href="#" class="alert-link">H78</a>, <a href="#" class="alert-link">H79</a></div>
+                    <hr/>
+                    <div><strong>Tag : </strong> title</div>
+                    <hr/>
+                    <div><strong>Message : </strong> Check that the link text combined with programmatically determined link context identifies the purpose of the link.</div>
+                    <hr/>
+                    <div><strong>Element : </strong> \\u003Ctitle>...\\u003C/title></div>
+                </div>
+            </div>
+        </div>
+        <div class="col collapse btncollapse" data-parent="#accordion" id="collapseWarnings">
+            <div class="card bg-warning">
+                <div class="alert alert-warning btncollapse" role="alert">
+                    <div><strong>Code(s) : </strong>WCAG2AA.Principle2.Guideline 2_4.2_4_4.H77,H78,H79,H80,H81 </div>
+                    <hr/>
+                    <div><strong>Technique(s) : </strong> <a href="#" class="alert-link">H77</a>, <a href="#" class="alert-link">H78</a>, <a href="#" class="alert-link">H79</a></div>
+                    <hr/>
+                    <div><strong>Tag : </strong> title</div>
+                    <hr/>
+                    <div><strong>Message : </strong> Check that the link text combined with programmatically determined link context identifies the purpose of the link.</div>
+                    <hr/>
+                    <div><strong>Element : </strong> \\u003Ctitle>...\\u003C/title></div>
+                </div>
+                <div class="alert alert-warning btncollapse" role="alert">
+                    <div><strong>Code(s) : </strong>WCAG2AA.Principle2.Guideline 2_4.2_4_4.H77,H78,H79,H80,H81 </div>
+                    <hr/>
+                    <div><strong>Technique(s) : </strong> <a href="#" class="alert-link">H77</a>, <a href="#" class="alert-link">H78</a>, <a href="#" class="alert-link">H79</a></div>
+                    <hr/>
+                    <div><strong>Tag : </strong> title</div>
+                    <hr/>
+                    <div><strong>Message : </strong> Check that the link text combined with programmatically determined link context identifies the purpose of the link.</div>
+                    <hr/>
+                    <div><strong>Element : </strong> \\u003Ctitle>...\\u003C/title></div>
+                </div>
+                <div class="alert alert-warning btncollapse" role="alert">
                     <div><strong>Code(s) : </strong>WCAG2AA.Principle2.Guideline 2_4.2_4_4.H77,H78,H79,H80,H81 </div>
                     <hr/>
                     <div><strong>Technique(s) : </strong> <a href="#" class="alert-link">H77</a>, <a href="#" class="alert-link">H78</a>, <a href="#" class="alert-link">H79</a></div>
