--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -197,6 +197,11 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="footer"></div>
+        </div>
+    </div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
